--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
 - waitress
 - pip:
   - beaker
-  - genedataset>=1.0.0
+  - genedataset>=1.0.0a
   - pygments
   - pyramid-beaker
   - pyramid-debugtoolbar
